login using fakeuser

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,13 @@
     </span>
     
     <span class="example-fill-remaining-space"></span>
-    <button mat-button (click)="login()">
+    <button *ngIf="isUserLoggedIn==false"   mat-button (click)="login()">
       <mat-icon>account_circle</mat-icon>
       Log in
+    </button>
+    <button *ngIf="isUserLoggedIn"   mat-button (click)="logout($event)">
+      <mat-icon>account_circle</mat-icon>
+      Log out
     </button>
   </mat-toolbar>
   
@@ -30,7 +34,7 @@
           <mat-list-item (click)="mobileQuery.matches ? snav.toggle() : null" routerLink="ricerca-pratiche">
             <h4 matLine>Ricerca</h4>
           </mat-list-item>
-          <mat-list-item (click)="mobileQuery.matches ? snav.toggle() : null" routerLink="mie-pratiche">
+          <mat-list-item *ngIf="isUserLoggedIn==false" (click)="mobileQuery.matches ? snav.toggle() : null" routerLink="mie-pratiche">
             <h4 matLine>Le mie pratiche</h4>
           </mat-list-item>
         <mat-divider></mat-divider>
