aggiunto componente per occupazione suolo pubblico

--- a/src/app/pratiche/moduli/components-edilizia/occupazione-edile/occupazione-edile.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/occupazione-edile/occupazione-edile.component.html
@@ -4,7 +4,7 @@
         Dati pratica
         </mat-panel-title>
         <mat-panel-description>
-        Compila i dati per l'autorizzazione
+        Pratica di occupazione suolo a carattere edilizio
         </mat-panel-description>
     </mat-expansion-panel-header>
     <mat-form-field class="div-half" appearance="outline">
