--- a/src/app/pratiche/moduli/components-edilizia/rottura-suolo/rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/rottura-suolo/rottura-suolo.component.html
@@ -4,7 +4,7 @@
         Dati pratica
         </mat-panel-title>
         <mat-panel-description>
-        Compila i dati per l'autorizzazione
+        Pratica di rottura suolo
         </mat-panel-description>
     </mat-expansion-panel-header>
     <p class="padding-div">Inoltra la presente istanza al fine di essere autorizzato alla rottura del suolo pubblico di cui all'oggetto per</p>
