--- a/src/app/pratiche/moduli/components-edilizia/occupazione-suolo-pubblico/occupazione-suolo-pubblico.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/occupazione-suolo-pubblico/occupazione-suolo-pubblico.component.html
@@ -20,6 +20,7 @@
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Ubicazione</mat-label>
         <input matInput formControlName="address" type="text">
+        <mat-hint>Indicare via e numero civico</mat-hint>
         <mat-error>{{getErrorMessage(form.get('address'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third text-right" appearance="outline">
