--- a/src/app/pratiche/moduli/components-edilizia/occupazione-traslochi-lavori/occupazione-traslochi-lavori.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/occupazione-traslochi-lavori/occupazione-traslochi-lavori.component.html
@@ -17,21 +17,21 @@
         <mat-label>Lunghezza</mat-label>
         <input matInput formControlName="length" type="number">
         <span matSuffix>m</span>
-        <mat-hint>Lunghezza dell'occupazione espressa in metri</mat-hint>
+        <mat-hint>Lunghezza dell'occupazione</mat-hint>
         <mat-error>{{getErrorMessage(form.get('length'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third text-right" appearance="outline">
         <mat-label>Larghezza</mat-label>
         <input matInput formControlName="width" type="number">
         <span matSuffix>m</span>
-        <mat-hint>Larghezza dell'occupazione espressa in metri</mat-hint>
+        <mat-hint>Larghezza dell'occupazione</mat-hint>
         <mat-error>{{getErrorMessage(form.get('width'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third text-right" appearance="outline">
         <mat-label>Area</mat-label>
         <input matInput formControlName="square_meters" type="number">
         <span matSuffix>m<sup>2</sup></span>
-        <mat-hint>Area dell'occupazione espressa in metri quadrati</mat-hint>
+        <mat-hint>Area dell'occupazione</mat-hint>
         <mat-error>{{getErrorMessage(form.get('square_meters'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-a-third" appearance="outline">
