--- a/src/app/pratiche/moduli/edilizia/edilizia.component.html
+++ b/src/app/pratiche/moduli/edilizia/edilizia.component.html
@@ -1,6 +1,6 @@
 
     <form [formGroup]="form">
-        <mat-expansion-panel formGroupName="owner" class="referente-group" expanded>
+        <!-- <mat-expansion-panel formGroupName="owner" class="referente-group" expanded>
             <mat-expansion-panel-header>
                 <mat-panel-title>
                   Proprietario 
@@ -42,11 +42,6 @@
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Codice fiscale</mat-label>
                 <input formControlName="fiscal_code" matInput type="text">
-                <!-- <button [disabled]="form.get(['owner', 'fiscal_code']).invalid || form.get(['owner', 'fiscal_code']).value == ''" mat-icon-button matSuffix
-                (click)="calculateValueFromFiscalCode(form.get('owner'))"
-                matTooltip="Autocompila i campi">
-                    <mat-icon>post_add</mat-icon>
-                </button> -->
                 <mat-error>{{getErrorMessage(form.get('owner').get('fiscal_code'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
@@ -96,7 +91,6 @@
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Comune di nascita</mat-label>
-                <!-- <mat-select formControlName="birthplace" (focus)="getComuni('owner/county_of_birth', 'owner/birthplace')"> -->
                 <mat-select formControlName="birthplace">
                     <mat-option>----</mat-option>
                     <mat-option *ngFor="let comune of comuni[toCamelCase('owner/birthplace')] || []" [value]="comune">
@@ -190,24 +184,22 @@
                 <input formControlName="phone" matInput type="text" >
                 <mat-error>{{getErrorMessage(form.get('owner').get('phone'))}}</mat-error>
             </mat-form-field>
-            <!-- <mat-form-field class="div-half" appearance="outline">
-                <mat-label>Cellulare</mat-label>
-                <input formControlName="cellular" matInput type="number" (change)="check(form.get('owner'), 'cellular','phone')">
-                <mat-error>{{getErrorMessage(form.get('owner').get('cellular'))}}</mat-error>
-            </mat-form-field> -->
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Email</mat-label>
                 <input formControlName="email" matInput type="email">
                 <mat-error>{{getErrorMessage(form.get('owner').get('email'))}}</mat-error>
             </mat-form-field>
-            <!-- <mat-form-field class="div-half" appearance="outline">
-                <mat-label>PEC</mat-label>
-                <input formControlName="pec" matInput type="email">
-                <mat-error>{{getErrorMessage(form.get('owner').get('pec'))}}</mat-error>
-            </mat-form-field> -->
             <mat-error>{{getErrorMessage(form.get('owner'))}}</mat-error>
             
-        </mat-expansion-panel>
+        </mat-expansion-panel> -->
+        <owner 
+        [form]="form.get('owner')"
+        [tipologie]="tipologie"
+        [generi]="generi"
+        [tipi_documento]="tipi_documento"
+        [tipologie_contatto]="tipologie_contatto"
+        [province]="province"
+        [nazioni]="nazioni"></owner>
         <!-- <mat-expansion-panel [disabled]="!form.get('expert').enabled" formGroupName="expert" class="referente-group" [expanded]="form.get('expert').enabled">
             <mat-expansion-panel-header>
                 <mat-panel-title>
@@ -347,7 +339,7 @@
             </mat-form-field>
             <mat-error>{{getErrorMessage(form.get('expert'))}}</mat-error>
         </mat-expansion-panel> -->
-        <mat-expansion-panel [disabled]="!form.get('experts').enabled" formArrayName="experts" class="referente-group" [expanded]="form.get('experts').enabled">
+        <!-- <mat-expansion-panel [disabled]="!form.get('experts').enabled" formArrayName="experts" class="referente-group" [expanded]="form.get('experts').enabled">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                   Tecnici 
@@ -491,28 +483,25 @@
                     <input formControlName="phone" matInput type="text">
                     <mat-error>{{getErrorMessage(formExperts.controls[j].get('phone'))}}</mat-error>
                 </mat-form-field>
-                <!-- <mat-form-field class="div-half" appearance="outline">
-                    <mat-label>Cellulare</mat-label>
-                    <input formControlName="cellular" matInput type="number" (change)="check(formExperts.controls[j], 'cellular','phone')">
-                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('cellular'))}}</mat-error>
-                </mat-form-field> -->
                 <mat-form-field class="div-half" appearance="outline">
                     <mat-label>Email</mat-label>
                     <input formControlName="email" matInput type="email">
                     <mat-error>{{getErrorMessage(formExperts.controls[j].get('email'))}}</mat-error>
                 </mat-form-field>
-                <!-- <mat-form-field class="div-half" appearance="outline">
-                    <mat-label>PEC</mat-label>
-                    <input formControlName="pec" matInput type="email">
-                    <mat-error>{{getErrorMessage(formExperts.controls[j].get('pec'))}}</mat-error>
-                </mat-form-field> -->
                 <mat-error>{{getErrorMessage(formExperts.controls[j])}}</mat-error>
                 <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formExperts, j);"><mat-icon>close</mat-icon></button>
             </mat-card>
             <div class="div-full">
                 <button class="button-add" mat-raised-button color="primary" (click)="addExpert(formExperts);">Aggiungi</button>
             </div>
-        </mat-expansion-panel>
+        </mat-expansion-panel> -->
+        <experts 
+        [form]="form.get('experts')"
+        [tipologie]="tipologie"
+        [generi]="generi"
+        [tipologie_contatto]="tipologie_contatto"
+        [titoli_professionali]="titoli_professionali"
+        [province]="province"></experts>
         <div class="div-checkbox">
             <mat-checkbox formControlName="delegated">Sottomissione per conto terzi</mat-checkbox>
             <mat-error>{{getErrorMessage(form.get('delegated'))}}</mat-error>
@@ -630,7 +619,7 @@
             </mat-radio-group>
             <mat-error>{{getErrorMessage(form.get('work_supplier'))}}</mat-error>
         </div>
-        <mat-expansion-panel [disabled]="!form.get('supplier_business').enabled" formGroupName="supplier_business" class="referente-group" [expanded]="form.get('supplier_business').enabled">
+        <!-- <mat-expansion-panel [disabled]="!form.get('supplier_business').enabled" formGroupName="supplier_business" class="referente-group" [expanded]="form.get('supplier_business').enabled">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                   Impresa
@@ -733,7 +722,11 @@
                 <mat-error>{{getErrorMessage(form.get('supplier_business').get('email'))}}</mat-error>
             </mat-form-field>
             <mat-error>{{getErrorMessage(form.get('supplier_business'))}}</mat-error>
-        </mat-expansion-panel>
+        </mat-expansion-panel> -->
+        <supplier 
+        [form]="form.get('supplier_business')"
+        [tipologie_contatto]="tipologie_contatto"
+        [province]="province"></supplier>
         <ng-container detailsPratiche [modulo]="modulo" [form]="form.get('details')"></ng-container>
         <!-- <rottura-suolo [form]="form.get('details')"></rottura-suolo> -->
         <!-- <mat-expansion-panel formGroupName="details" expanded>
