--- a/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
+++ b/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
@@ -1,2 +1,23 @@
 <p>Pratica: {{idProcedure}}!</p>
 <p>{{data_procedure | json}}</p>
+<div class="loading-shade" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+</div>
+<mat-tab-group *ngIf="!isLoading">
+    <mat-tab label="Prorietario" *ngIf="data_procedure.owner" >
+        <view-owner 
+            [data]="data_procedure.owner"
+            [tipologie]="tipologie"
+            [generi]="generi"
+            [tipi_documento]="tipi_documento"
+            [tipologie_contatto]="tipologie_contatto"
+            [province]="province"
+            [nazioni]="nazioni">
+        </view-owner>
+    </mat-tab>
+    <mat-tab label="Tecnici" *ngIf="data_procedure.experts">Tecnici</mat-tab>
+    <mat-tab label="Delegato" *ngIf="data_procedure.administrator">Delegato</mat-tab>
+    <mat-tab label="Ditta costrutrice" *ngIf="data_procedure.supplier">Ditta costrutrice</mat-tab>
+    <mat-tab label="Dettagli pratica" *ngIf="data_procedure.details">Dettagli pratica</mat-tab>
+    <mat-tab label="Documenti/allegati">Documenti/allegati</mat-tab>
+</mat-tab-group>
