--- a/src/app/mie-pratiche/mie-pratiche.component.html
+++ b/src/app/mie-pratiche/mie-pratiche.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z8">
-  <div class="example-loading-shade" *ngIf="isLoadingResults">
+  <div class="loading-shade" *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
   <table mat-table [dataSource]="dataSource">
@@ -29,7 +29,7 @@
 
     
     <ng-container matColumnDef="owner">
-      <th mat-header-cell *matHeaderCellDef> Referente </th>
+      <th mat-header-cell *matHeaderCellDef> Proprietario </th>
       <td mat-cell *matCellDef="let element"> {{element.owner.name ? element.owner.name : (element.owner.first_name + ' '+ element.owner.last_name) }} </td>
     </ng-container>
 
@@ -47,7 +47,7 @@
       <th mat-header-cell *matHeaderCellDef> Azioni </th>
       <td mat-cell *matCellDef="let element" >
         <button mat-icon-button matTooltip="Visualizza dettagli" [routerLink]="['dettagli-pratica/', element.id]"><mat-icon>launch</mat-icon> </button>
-        <button mat-icon-button matTooltip="Modifica"><mat-icon>edit</mat-icon></button>
+        <!-- <button mat-icon-button matTooltip="Modifica"><mat-icon>edit</mat-icon></button> -->
         <button mat-icon-button matTooltip="Elimina la pratica"><mat-icon>delete</mat-icon> </button>
       </td>
     </ng-container> 
