aggiunto visualizzazione tecnici

--- a/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
+++ b/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
@@ -15,7 +15,16 @@
             [nazioni]="nazioni">
         </view-owner>
     </mat-tab>
-    <mat-tab label="Tecnici" *ngIf="data_procedure.experts">Tecnici</mat-tab>
+    <mat-tab label="Tecnici" *ngIf="data_procedure.experts">
+        <view-experts
+            [experts]="data_procedure.experts"
+            [tipologie]="tipologie"
+            [generi]="generi"
+            [tipologie_contatto]="tipologie_contatto"
+            [titoli_professionali]="titoli_professionali"
+            [province]="province">
+        </view-experts>
+    </mat-tab>
     <mat-tab label="Delegato" *ngIf="data_procedure.administrator">Delegato</mat-tab>
     <mat-tab label="Ditta costrutrice" *ngIf="data_procedure.supplier">Ditta costrutrice</mat-tab>
     <mat-tab label="Dettagli pratica" *ngIf="data_procedure.details">Dettagli pratica</mat-tab>
