--- a/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
+++ b/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
@@ -25,7 +25,15 @@
             [province]="province">
         </view-experts>
     </mat-tab>
-    <mat-tab label="Delegato" *ngIf="data_procedure.administrator">Delegato</mat-tab>
+    <mat-tab label="Delegato" *ngIf="data_procedure.administrator">
+        <view-administrator 
+            [data]="data_procedure.administrator"
+            [generi]="generi"
+            [titoli_professionali]="titoli_professionali"
+            [tipologie_contatto]="tipologie_contatto"
+            [province]="province">
+        </view-administrator>
+    </mat-tab>
     <mat-tab label="Ditta costrutrice" *ngIf="data_procedure.supplier">Ditta costrutrice</mat-tab>
     <mat-tab label="Dettagli pratica" *ngIf="data_procedure.details">Dettagli pratica</mat-tab>
     <mat-tab label="Documenti/allegati">Documenti/allegati</mat-tab>
