fix number string phone

--- a/src/app/pratiche/moduli/components-edilizia/occupazione-suolo-pubblico/occupazione-suolo-pubblico.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/occupazione-suolo-pubblico/occupazione-suolo-pubblico.component.html
@@ -4,7 +4,7 @@
         Dati pratica
         </mat-panel-title>
         <mat-panel-description>
-        Pratica di occupazione suolo a carattere edilizio
+        Pratica di occupazione suolo pubblico
         </mat-panel-description>
     </mat-expansion-panel-header>
     <mat-form-field class="div-half" appearance="outline">
