--- a/src/app/pratiche/moduli/components-edilizia/expert/expert.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/expert/expert.component.html
@@ -113,7 +113,7 @@
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Telefono</mat-label>
-                <input formControlName="phone" matInput type="tel">
+                <input formControlName="phone" matInput type="text">
                 <mat-error>{{getErrorMessage(formContacts.controls[i].get('phone'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
