--- a/src/app/pratiche/moduli/components-edilizia/owner/owner.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/owner/owner.component.html
@@ -164,7 +164,7 @@
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Telefono</mat-label>
-                <input formControlName="phone" matInput type="number">
+                <input formControlName="phone" matInput type="text">
                 <mat-error>{{getErrorMessage(formContacts.controls[i].get('phone'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
