--- a/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
+++ b/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
@@ -1,7 +1,19 @@
-<p>Pratica: {{idProcedure}}!</p>
-<p>{{data_procedure | json}}</p>
 <div class="loading-shade" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
+</div>
+<div *ngIf="!isLoading">
+    <p class="div-half"><b>Pratica N.: </b> {{data_procedure.number}}</p>
+    <p class="div-half"><b>Protocollo: </b> {{data_procedure.protocol || '/'}}</p>
+    <p class="div-half"><b>Stato: </b><status-procedures [status]="data_procedure.status"></status-procedures></p>
+    <p class="div-half"><b>Marca da bollo: </b> {{data_procedure.stamp_number || '/'}}</p>
+    <p style="font-weight: bold;">{{data_procedure.subject}}</p>
+    <p class="div-half"><b>Tipologia: </b> {{data_procedure.type}}</p>
+    <p class="div-half"><b>Categoria: </b> {{data_procedure.category | categoryPipe}}</p>
+    <p class="div-half"><b>Delegata: </b> {{data_procedure.delegated | delegatedPipe}}</p>
+    <p class="div-half"><b>Prorogabile: </b> {{data_procedure.can_be_extended | canExtended}}</p>
+    <p class="div-half"><b>Data creazione: </b> {{data_procedure.created_at}}</p>
+    <p class="div-half"><b>Ultimo aggiornamento: </b> {{data_procedure.updated_at}}</p>
+    <p class="div-full"><b>Allegati pratica: </b> {{(data_procedure.all_mandatory_documents_uploaded | documentsUploaded)['tooltip']}}</p>
 </div>
 <mat-tab-group *ngIf="!isLoading">
     <mat-tab label="Prorietario" *ngIf="data_procedure.owner" >
