--- a/src/app/mie-pratiche/mie-pratiche.component.html
+++ b/src/app/mie-pratiche/mie-pratiche.component.html
@@ -3,7 +3,6 @@
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
   <table mat-table [dataSource]="dataSource">
-
     
     <ng-container matColumnDef="number">
       <th mat-header-cell *matHeaderCellDef>N. pratica</th>
@@ -40,7 +39,7 @@
 
     <ng-container matColumnDef="all_mandatory_documents_uploaded">
       <th mat-header-cell *matHeaderCellDef> Documenti </th>
-      <td mat-cell *matCellDef="let element"><documents-uploaded [doucuments_uploaded]="element.all_mandatory_documents_uploaded"></documents-uploaded></td>
+      <td mat-cell class="documents_uploaded" *matCellDef="let element"><documents-uploaded [doucuments_uploaded]="element.all_mandatory_documents_uploaded"></documents-uploaded></td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
