--- a/src/app/core/components/shared/details/view-occupazione-suolo-edilizio/view-occupazione-suolo-edilizio.component.html
+++ b/src/app/core/components/shared/details/view-occupazione-suolo-edilizio/view-occupazione-suolo-edilizio.component.html
@@ -110,6 +110,18 @@
         <span matSuffix>gg</span>
         <mat-error>{{getErrorMessage(form.get('total_duration'))}}</mat-error>
     </mat-form-field>
-
 </mat-card>
+<div class="div-full">
+    <button *ngIf="!can_modify" class="button-login" mat-raised-button color="primary" (click)="modify()">
+        <mat-icon>create</mat-icon>
+        Modifica
+    </button>
+    <button *ngIf="can_modify" class="button-login" mat-raised-button color="warn" (click)="modify()">
+        <mat-icon>close</mat-icon>
+        Annulla
+    </button>
+    <button *ngIf="can_modify" class="button-login" mat-raised-button color="primary" (click)="save()">
+        Salva
+    </button>
+</div>
 
