--- a/src/app/core/components/shared/details/view-traslochi-lavori/view-traslochi-lavori.component.html
+++ b/src/app/core/components/shared/details/view-traslochi-lavori/view-traslochi-lavori.component.html
@@ -78,3 +78,16 @@
         <mat-error>{{getErrorMessage(form.get('through_details'))}}</mat-error>
     </mat-form-field>
 </mat-card>
+<div class="div-full">
+    <button *ngIf="!can_modify" class="button-login" mat-raised-button color="primary" (click)="modify()">
+        <mat-icon>create</mat-icon>
+        Modifica
+    </button>
+    <button *ngIf="can_modify" class="button-login" mat-raised-button color="warn" (click)="modify()">
+        <mat-icon>close</mat-icon>
+        Annulla
+    </button>
+    <button *ngIf="can_modify" class="button-login" mat-raised-button color="primary" (click)="save()">
+        Salva
+    </button>
+</div>
