--- a/src/app/mie-pratiche/mie-pratiche.component.html
+++ b/src/app/mie-pratiche/mie-pratiche.component.html
@@ -34,7 +34,7 @@
 
     <ng-container matColumnDef="expert">
       <th mat-header-cell *matHeaderCellDef> Tecnico </th>
-      <td mat-cell *matCellDef="let element"> {{element.experts[0].name ? element.experts[0].name : (element.experts[0].first_name + ' '+ element.experts[0].last_name) }} </td>
+      <td mat-cell *matCellDef="let element"> {{element | expertPipe}} </td>
     </ng-container>
 
     <ng-container matColumnDef="all_mandatory_documents_uploaded">
